[package]
name = "supertokens-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Carlos Ortiz <cortiz@jmpeax.com>"]
repository ="https://github.com/cortiz/supertokens-rs"
license = "MIT"
homepage = "supertokens-rs.jmpeax.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
